--- a/sharedData/build.gradle
+++ b/sharedData/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'org.jetbrains.kotlin.multiplatform' version '1.3.71'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.71'
+    id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.72'
 }
 
 def serialization_version = "0.20.0"
 
-group 'ru.altmanea.example'
-version '1.0-SNAPSHOT'
+group 'ru.altmanEA.example.kotlinJsPlus'
+version '0.1'
 
 repositories {
     mavenCentral()
