server first commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 /sharedData/.gradle
 /sharedData/.idea
+/sharedData/build
 /sharedData/gradle
 /sharedData/gradlew
 /sharedData/gradlew.bat
 /reduxStore/.gradle
 /reduxStore/.idea
+/reduxStore/build
 /reduxStore/gradle
 /reduxStore/gradlew
 /reduxStore/gradlew.bat
+/server/.gradle
+/server/.idea
+/server/build
+/server/out
+/server/gradle
+/server/gradlew
+/server/gradlew.bat
