--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@
 /server/gradle
 /server/gradlew
 /server/gradlew.bat
+/client/.gradle
+/client/.idea
+/client/build
+/client/gradle
+/client/gradlew
+/client/gradlew.bat
