--- a/reduxStore/build.gradle
+++ b/reduxStore/build.gradle
@@ -27,13 +27,7 @@ dependencies {
 }
 
 kotlin {
-    target.browser {
-        testTask {
-            useKarma{
-                useChrome()
-            }
-        }
-    }
+    target.browser { }
     sourceSets["main"].dependencies {
         implementation(npm("redux", "4.0.0"))
         implementation(npm("cross-fetch", "3.0.4"))
